--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "workspaces": [
     "packages/*",
-    "packages/@stimulus/*"
+    "packages/@mixtint/*"
   ],
   "dependencies": {
     "@babel/core": "^7.13.13",
