--- a/packages/stimulus/package.json
+++ b/packages/stimulus/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "stimulus",
-  "version": "2.0.0",
+  "name": "stimulus-webpack",
+  "version": "2.1.0",
   "description": "Stimulus JavaScript framework",
   "repository": "https://stimulus.hotwired.dev",
   "author": "Basecamp, LLC",
