--- a/packages/@stimulus/multimap/package.json
+++ b/packages/@stimulus/multimap/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@stimulus/multimap",
-  "version": "2.0.0",
+  "name": "@mixtint/multimap",
+  "version": "2.1.0",
   "description": "Multimap maps one key to a set of many values",
   "repository": "https://stimulus.hotwired.dev",
   "author": "Basecamp, LLC",
