--- a/packages/@stimulus/mutation-observers/package.json
+++ b/packages/@stimulus/mutation-observers/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@stimulus/mutation-observers",
-  "version": "2.0.0",
+  "name": "@mixtint/mutation-observers",
+  "version": "2.1.0",
   "description": "Practical wrappers around DOM MutationObserver",
   "repository": "https://stimulus.hotwired.dev",
   "author": "Basecamp, LLC",
@@ -13,10 +13,10 @@
   "types": "dist/index.d.ts",
   "license": "MIT",
   "dependencies": {
-    "@stimulus/multimap": "^2.0.0"
+    "@mixtint/multimap": "^2.1.2-alpha.0"
   },
   "devDependencies": {
-    "@stimulus/test": "^2.0.0"
+    "@mixtint/test": "^2.1.2-alpha.0"
   },
   "publishConfig": {
     "access": "public"
