--- a/packages/@stimulus/webpack-helpers/package.json
+++ b/packages/@stimulus/webpack-helpers/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@stimulus/webpack-helpers",
-  "version": "2.0.0",
+  "name": "@mixtint/webpack-helpers",
+  "version": "2.1.0",
   "description": "Stimulus JavaScript framework: webpack helpers",
   "repository": "https://stimulus.hotwired.dev",
   "author": "Basecamp, LLC",
