--- a/packages/@stimulus/core/package.json
+++ b/packages/@stimulus/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stimulus/core",
+  "name": "@mixtint/core",
   "version": "2.0.0",
   "description": "Stimulus JavaScript framework: Core library",
   "repository": "https://stimulus.hotwired.dev",
@@ -14,15 +14,15 @@
   "types": "dist/index.d.ts",
   "license": "MIT",
   "dependencies": {
-    "@stimulus/multimap": "^2.0.0",
-    "@stimulus/mutation-observers": "^2.0.0"
+    "@mixtint/multimap": "^2.0.0",
+    "@mixtint/mutation-observers": "^2.0.0"
   },
   "publishConfig": {
     "access": "public"
   },
   "devDependencies": {
-    "@stimulus/polyfills": "^2.0.0",
-    "@stimulus/test": "^2.0.0"
+    "@mixtint/polyfills": "^2.0.0",
+    "@mixtint/test": "^2.0.0"
   },
   "scripts": {
     "clean": "rimraf dist *.tsbuildinfo"
