--- a/packages/@stimulus/multimap/package.json
+++ b/packages/@stimulus/multimap/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stimulus/multimap",
+  "name": "@mixtint/multimap",
   "version": "2.0.0",
   "description": "Multimap maps one key to a set of many values",
   "repository": "https://stimulus.hotwired.dev",
