--- a/packages/@stimulus/polyfills/package.json
+++ b/packages/@stimulus/polyfills/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stimulus/polyfills",
+  "name": "@mixtint/polyfills",
   "version": "2.0.0",
   "description": "Polyfills to support Stimulus in older browsers",
   "repository": "https://stimulus.hotwired.dev",
