--- a/packages/@stimulus/webpack-helpers/package.json
+++ b/packages/@stimulus/webpack-helpers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stimulus/webpack-helpers",
+  "name": "@mixtint/webpack-helpers",
   "version": "2.0.0",
   "description": "Stimulus JavaScript framework: webpack helpers",
   "repository": "https://stimulus.hotwired.dev",
