--- a/packages/@stimulus/examples/package.json
+++ b/packages/@stimulus/examples/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@mixtint/examples",
-  "version": "2.0.0",
-  "private": true,
+  "version": "2.1.1-alpha.0",
   "dependencies": {
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
