--- a/packages/@stimulus/polyfills/package.json
+++ b/packages/@stimulus/polyfills/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mixtint/polyfills",
-  "version": "2.0.0",
+  "version": "2.1.1-alpha.0",
   "description": "Polyfills to support Stimulus in older browsers",
   "repository": "https://stimulus.hotwired.dev",
   "author": "Basecamp, LLC",
