--- a/packages/@stimulus/examples/package.json
+++ b/packages/@stimulus/examples/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mixtint/examples",
-  "version": "2.0.0",
+  "version": "2.1.1-alpha.0",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.5.5",
